--- a/coming-soon.html
+++ b/coming-soon.html
@@ -36,7 +36,7 @@
       </head>
     <body>
         <p>coming soon</p>
-        <ul style="list-style-type:none">
+        <!-- <ul style="list-style-type:none"> -->
             <li><a href="about"><font face="roboto" size="5">return</a></li>
         </ul>
     </body>
