--- a/coming-soon.html
+++ b/coming-soon.html
@@ -35,9 +35,8 @@
         </style>
       </head>
     <body>
-        <p>coming soon</p>
-        <!-- <ul style="list-style-type:none"> -->
-            <li><a href="about"><font face="roboto" size="5">return</a></li>
+        <ul style="list-style-type:none">
+            <li><a href="about"><font face="roboto" size="5">coming soon</a></li>
         </ul>
     </body>
 </html>
