update coming soon color

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -28,7 +28,7 @@
       text-decoration: none;
       }
       a:hover {
-        color: #F2C94C;
+        color: #761414;
         background-color: transparent;
         text-decoration: none;
       }
